--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ observer.observe(document.body, { childList: true, subtree: true });
             <div class="w-layout-blockcontainer container w-container">
                 <div class="design-wrapper">
                     <div class="design-top-wrap">
-                        <div class="section-sub-title">About me and anyone</div>
+                        <div class="section-sub-title">About me</div>
                         <div class="content-wrap">
                             <h2 class="deesign-title"><span class="text-gray _01">Short,</span> <span class="text-gray _02">human-</span><br/><span class="text-gray _03">centric</span> <span class="text-gray _04">bio</span> <span class="text-gray _05">focusing</span> <span class="text-gray _06">on</span>                                <span class="text-gray _07">passion</span></h2><img src="https://cdn.prod.website-files.com/6875b66038bb2a9e79587de1/6881df82614d08e943975665_line.svg" loading="lazy" alt="" class="line-image" /><img src="https://cdn.prod.website-files.com/6875b66038bb2a9e79587de1/6881df82f574b8ecbcb297a7_star.svg"
                                 loading="lazy" alt="" class="star-image" /><img src="https://cdn.prod.website-files.com/6875b66038bb2a9e79587de1/6881df82a5019220097cdde1_circle.svg" loading="lazy" alt="" class="circle-image" /></div>
